@@ -3,6 +3,10 @@
 1. Add a new 'Dark Inverted Gradient' and use this as the default gradient
    for menu stripes.
 2. Add option to lighten/darken the background of tabs.
+3. Use KDE_SESSION_VERSION to determine which KDE prefix (KDE3, or KDE4) to
+   seach first for qtc_xxx.themerc files.
+4. Update Klearlooks to be more consistent with Clearlooks (lighten tab background,
+   use highlight strip on active tab, dont colour active tab)
 
 0.65.4
 ------
